@@ -73,13 +73,13 @@ MK.Lang.Ability = {}
 MK.Lang.Ability.Brill = KBM.Language:Add("Brilliant Inferno")
 MK.Lang.Ability.Brill:SetFrench("Brasier éclatant")
 MK.Lang.Ability.Brill:SetGerman("Blendendes Inferno")
-
+MK.Lang.Ability.Brill:SetRussian("Блистающее инферно")
 -- Menu Dictionary
 MK.Lang.Menu = {}
 MK.Lang.Menu.Brill = KBM.Language:Add("First Brilliant Inferno")
 MK.Lang.Menu.Brill:SetFrench("Premier Brasier éclatant")
 MK.Lang.Menu.Brill:SetGerman("Erstes Blendendes Inferno")
-
+MK.Lang.Menu.Brill:SetRussian("Первое Блистающее инферно")
 -- Description Dictionary
 MK.Lang.Main = {}
 MK.Lang.Main.Descript = KBM.Language:Add("Muglak")
